--- a/gui/ui/mainwindow.ui
+++ b/gui/ui/mainwindow.ui
@@ -11,7 +11,7 @@
             <property name="orientation">vertical</property>
             <child>
               <object id="newTaskButton" class="GtkButton">
-                <property name="label">Button 1</property>
+                <property name="label">New Task</property>
               </object>
             </child>
 
@@ -20,11 +20,10 @@
                 <property name="vexpand">TRUE</property>
               </object>
             </child>
-
             <child>
               <object id="removeTaskButton" class="GtkButton">
                 <property name="name">removeTaskButton</property>
-                <property name="label">Button 2</property>
+                <property name="label">Remove Task</property>
               </object>
             </child>
           </object>
