--- a/gui/ui/dialogwindow.ui
+++ b/gui/ui/dialogwindow.ui
@@ -16,14 +16,31 @@
                 </child>
                 <child>
                     <object id="taskDeadlineLabel" class="GtkLabel">
-                        <property name="label">Deadline: </property>
+                        <property name="label">At day: </property>
                         <layout>
                             <property name="column">0</property>
                             <property name="row">1</property>
                         </layout>
                     </object>
                 </child>
-                <property name="orientation">vertical</property>
+                <child>
+                    <object id="taskDescriptionLabel" class="GtkLabel">
+                        <property name="label">Description: </property>
+                        <layout>
+                            <property name="column">0</property>
+                            <property name="row">2</property>
+                        </layout>
+                    </object>
+                </child>
+                <child>
+                    <object id="taskTimeLabel" class="GtkLabel">
+                        <property name="label">Due to: </property>
+                        <layout>
+                            <property name="column">0</property>
+                            <property name="row">3</property>
+                        </layout>
+                    </object>
+                </child>
                 <child>
                     <object id="taskNameInput" class = "GtkEntry">
                         <property name="name">taskNameInput</property>
@@ -34,11 +51,33 @@
                     </object>
                 </child>
                 <child>
-                    <object id="taskDeadlineInput" class = "GtkEntry">
-                        <property name="name">taskDeadlineInput</property>
+                    <object id="taskDayInputExpander" class = "GtkExpander">
+                        <child>
+                            <object id="taskDayInput" class = "GtkCalendar">
+                                <property name="name">taskDayInput</property>
+                            </object>
+                        </child>
                         <layout>
                             <property name="column">1</property>
                             <property name="row">1</property>
+                        </layout>
+                    </object>
+                </child>
+                <child>
+                    <object id="taskDestriptionInput" class = "GtkEntry">
+                        <property name="name">taskDescriptionInput</property>
+                        <layout>
+                            <property name="column">1</property>
+                            <property name="row">2</property>
+                        </layout>
+                    </object>
+                </child>
+                <child>
+                    <object id="taskTimeInput" class = "GtkEntry">
+                        <property name="name">taskTimeInput</property>
+                        <layout>
+                            <property name="column">1</property>
+                            <property name="row">3</property>
                         </layout>
                     </object>
                 </child>
