--- a/gui/ui/mainwindow.ui
+++ b/gui/ui/mainwindow.ui
@@ -29,9 +29,9 @@
           </object>
         </child>
         <child>
-          <object id="taskBoxList" class="GtkListBox">
+          <object id="tasksBoxList" class="GtkListBox">
             <property name="hexpand">1</property>
-            <property name="name">taskBoxList</property>
+            <property name="name">tasksBoxList</property>
             <property name="show-separators">1</property>
           </object>
         </child>
