--- a/gui/ui/listboxrow.ui
+++ b/gui/ui/listboxrow.ui
@@ -37,6 +37,10 @@
                     <object id="rightSideContent" class="GtkBox">
                         <property name="orientation">horizontal</property>
                         <child>
+                            <object id="taskDeadline" class="GtkLabel">
+                            </object>
+                        </child>
+                        <child>
                             <object id="propertiesButton" class="GtkButton">
                                 <property name="vexpand">1</property>
                             </object>
