fixed box list refresh function, no more use after free

--- a/gui/ui/listboxrow.ui
+++ b/gui/ui/listboxrow.ui
@@ -38,6 +38,7 @@
                         <property name="orientation">horizontal</property>
                         <child>
                             <object id="taskDeadline" class="GtkLabel">
+                                <property name="name">taskDeadline</property>
                             </object>
                         </child>
                         <child>
