improved dialog logic by working with glib and not against it

--- a/gui/ui/listboxrow.ui
+++ b/gui/ui/listboxrow.ui
@@ -44,6 +44,7 @@
                         <child>
                             <object id="propertiesButton" class="GtkButton">
                                 <property name="vexpand">1</property>
+                                <property name="label">Edit</property>
                             </object>
                         </child>
                     </object>
